@@ -1,12 +1,8 @@
 #pragma once
 #include <tins/tins.h>
 #include <string>
-#include <sstream>
-#include <iomanip>
 
 using namespace Tins;
-
-#define PACKET_SIZE_LENGTH (5)
 
 class Serializer
 {
